Style and html changes to be able to close list, prevent text overlapping, and improve other ui/ux issues

--- a/styles.css
+++ b/styles.css
@@ -29,16 +29,20 @@ button {
 }
 
 /* Top Info */
-.get-stories-buttons {
-  height: 50px;
+#get-stories-buttons-container {
+  height: 100px;
   display: flex;
   padding-top: 50px;
   padding-bottom: 50px;
   text-align: center;
 }
 
+.get-stories-buttons {
+  font-size: 34px;
+}
+
 #title {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   top: 10%;
   line-height: 34px;
@@ -229,10 +233,11 @@ button {
 #list {
   width: 100%;
   height: 100%;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   overflow-y: auto;
+  margin-top: 20px;
   /* display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -249,9 +254,8 @@ button {
 }
 .list-song {
   width: 100%;
-  height: 120px;
-  font-size: 20px;
-  line-height: 30px;
+  height: 45px;
+  font-size: 30px;
   text-align: center;
   font-weight: bold;
   color: #fff;
